# PythonPomodoroStopwatchandTaskList

./: main.py  main.spec  pyproject.toml
src/: constants.py  main.py
utils/: constants.py  stylesheet.css
